--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <nav class="navbar">
             <ul>
                 <li>1</li>
-                <li></li>
-                <li></li>
+                <li>Melusi</li>
+                <li>Melusi</li>
                 <li></li>
                 <li></li>
                 <li></li>
